src/routes/TodoList/TodoList.module.scss
@use '/src/styles/constants/colors';
@use '/src/styles/constants/levels';
@use '/src/styles/mixins/flexbox';
@use '/src/styles/mixins/position';
@use '/src/styles/constants/themes';

$CATEGORY_COLOR: (
  study: red,
  business: blue,
  personal: purple,
  exercise: gold,
  etc: orange,
);

.todoList {
  position: relative;
  width: 360px;
  height: 720px;
  padding: 120px 0;
  overflow: hidden;
  background-color: var(--color-background);
  border-radius: 60px;

  h1 {
    padding-left: 40px;
    font-size: 32px;
    font-weight: 600;
    color: var(--color-title);
  }

  .greetings {
    user-select: none;
  }

  .magnify {
    position: absolute;
    top: 40px;
    right: 70px;
    width: 20px;
    height: 20px;
    cursor: pointer;
  }

  .themeBtn {
    position: absolute;
    top: 40px;
    right: 35px;
    width: 20px;
    height: 20px;
    cursor: pointer;

    span {
      color: var(--color-icon);
    }
  }

  .searchBox {
    position: absolute;
    top: 35px;
    right: 64px;
    box-sizing: border-box;
    width: 32px;
    height: 32px;
    padding: 0 10px;
    border-radius: 16px;
    transition: width 0.3s;

    &.clicked {
      width: 140px;
      padding-right: 30px;
      border: 1px solid #cacaca;
    }
  }

  .searchInput {
    width: 100%;
    height: 100%;

    &::placeholder {
      position: relative;
      left: 1%;
      width: 100px;
      opacity: 0;
      transition: 0.2s;
    }

    &.clicked::placeholder {
      opacity: 100;
      transition: 0.8s;
    }
  }

  .categoryTitle {
    padding-left: 40px;
    margin: 30px 0 24px;
    font-size: 12px;
    font-weight: 600;
    color: colors.$TASKS_TITLE;
    text-transform: uppercase;
    letter-spacing: 0.05em;
  }

  .categoriesWrapper {
    height: 100px;
    overflow: scroll;
    cursor: pointer;
  }

  .categories {
    height: 100px;
  }

  .category {
    float: left;
    width: 180px;
    height: 100px;
    padding: 20px 15px;
    margin-left: 40px;
    line-height: 22px;
    background-color: colors.$TASK_BACKGROUND;
    border-radius: 20px;
    box-shadow: 0 10px 20px 0 rgba(colors.$BLACK, 2%);

    + .category {
      margin-left: 10px;
    }
  }

  .categoriesCount {
    margin-bottom: 2px;
    font-size: 12px;
    font-weight: 600;
    color: colors.$TASKS_TITLE;
    letter-spacing: 0.003em;
  }

  .categoriesTitle {
    margin-bottom: 10px;
    font-size: 18px;
    font-weight: 600;
    color: colors.$TASK_ITEM_TITLE;
  }

  .progressBar {
    position: relative;
    top: 3px;
    width: 0%;
    height: 3px;
    background-color: red;
    box-shadow: 0 3px 5px 0 rgba(colors.$BLACK, 30%);
    transition: 0.2s;

    > span {
      position: relative;
      top: -4px;
      left: -2px;
      display: block;
      width: 2px;
      height: 6px;
      margin-left: 100%;
      background-color: red;
    }
  }

  .bar {
    width: 100%;
    height: 3px;
    background-color: colors.$GRAYE;
  }

  .wrapTodo {
    position: relative;
  }

  .taskSlide.slide {
    right: -255px;
  }

  .taskSlide {
    @include flexbox.flexbox(center center);
    position: relative;
    top: -46px;
    right: -360px;
    width: 15px;
    height: 18px;
    font-size: 15px;
    transition: all 0.3s ease-in-out;
  }

  .task.slide {
    left: -77px;
    transition: all 0.3s ease-in-out;
  }

  .tasksTitle {
    padding-left: 40px;
    margin: 30px 0 24px;
    font-size: 12px;
    font-weight: 600;
    color: colors.$TASKS_TITLE;
    text-transform: uppercase;
    letter-spacing: 0.05em;
    user-select: none;

    > span {
      display: inline-block;
      height: 20px;
      padding: 0 10px;
      margin-left: 4px;
      line-height: 20px;
      color: colors.$TASKS_TITLE;
      text-transform: uppercase;
      letter-spacing: 0.05em;
      background-color: colors.$GRAYE;
      border-radius: 8px;
    }
  }

  .tasks {
    height: 280px;
    overflow-y: scroll;
  }

  .task {
    position: relative;
    left: 0;
    display: flex;
    align-items: center;
    height: 72px;
    padding-right: 24px;
    margin: 0 40px;
    line-height: 72px;
    background-color: colors.$TASK_BACKGROUND;
    border-radius: 32px;
    box-shadow: 0 10px 20px 0 rgba(colors.$BLACK, 2%);
    transition: all 0.3s ease-in-out;

    + .task {
      margin-top: 18px;
    }

    .dDay {
      position: absolute;
      top: 12%;
      right: 8%;
      height: 12px;
      font-size: 11px;
      font-weight: 550;
      line-height: 12px;
      color: colors.$DDAY_BLUE;
    }

    .dDay.dayRed {
      /* stylelint-disable-next-line scale-unlimited/declaration-strict-value */
      color: colors.$DDAY_RED !important;
    }

    .checkboxWrapper {
      @include flexbox.flexbox(center center);
      position: relative;
      width: 28px;
      height: 28px;
      margin: 0 24px;

      svg {
        @include position.middleBox;
        z-index: levels.$CHECK_ICON;
        color: colors.$WHITE;
        pointer-events: none;
        opacity: 0;
        transition: 0.2s;
      }
    }

    input[type='checkbox'] {
      @include position.middleBox;
      z-index: levels.$CHECK_BOX;
      width: 28px;
      height: 28px;
      cursor: pointer;
      border: 2px solid colors.$BLUE;
      border-radius: 50%;
      transition: 0.2s;

      &:checked {
        // background-color: colors.$BLUE;
        border: 0;

        ~ svg {
          opacity: 1;
        }
      }
    }
    // @each $key, $color in $CATEGORY_COLOR {
    //   input[type='checkbox'].#{$key} {
    //     @include position.middleBox;
    //     z-index: levels.$CHECK_BOX;
    //     width: 28px;
    //     height: 28px;
    //     cursor: pointer;
    //     border: 2px solid $color;
    //     border-radius: 50%;
    //     transition: 0.2s;
    //     &:checked {
    //       background-color: $color;
    //       border: 0;
    //       ~ svg {
    //         opacity: 1;
    //       }
    //     }
    //   }
    // }

    .wrapTouch {
      position: absolute;
      left: 70px;
      z-index: levels.$INDEX_FIRST;
      width: 210px;
      height: 72px;
      line-height: 72px;
      cursor: default;
    }

    .title {
      position: relative;
      padding: 0 10px;
      overflow: hidden;
      color: colors.$TASK_ITEM_TITLE;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

  .done {
    &::after {
      position: absolute;
      top: 50%;
      left: 0;
      width: 0;
      height: 1px;
      content: '';
      background-color: #000000;
      animation-name: afterWidth;
      animation-duration: 0.3s;
      animation-fill-mode: forwards;
    }
  }

  .editButton {
    padding: 18px 16px;
    color: colors.$WHITE;
    background-color: colors.$EDIT_BUTTON;
    border-radius: 10px 0 0 10px;
    transition: all 0.2s ease-in-out;
  }

  .deleteButton {
    padding: 18px 16px;
    color: colors.$WHITE;
    background-color: colors.$DELETE_BUTTON;
    border-radius: 0 10px 10px 0;
    transition: all 0.3s ease-in-out;
  }

  .addButton {
    @include position.absolute(auto 40px 40px auto);
    width: 66px;
    height: 66px;
    background-color: colors.$ADD_BUTTON;
    border-radius: 50%;
    box-shadow: 0 10px 20px 0 rgba(colors.$BLACK, 15%);
    transition: 0.2s;

    &:hover {
      background-color: rgba(colors.$ADD_BUTTON, 90%);
    }

    &::before,
    &::after {
      @include position.middleBox;
      width: 20px;
      height: 2px;
      content: '';
      background-color: colors.$WHITE;
    }

    &::after {
      transform: translate(-50%, -50%) rotate(90deg);
      transform-origin: center;
    }
  }

  @keyframes afterWidth {
    from {
      width: 0;
    }

    to {
      width: 100%;
    }
  }
}

